--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/DiemDanhHocVien/ThongTinDiemDanh.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/DiemDanhHocVien/ThongTinDiemDanh.cshtml
@@ -36,14 +36,14 @@
             <tbody>
                 @foreach (var hv in Model)
                 {
-                    var diemDanh = diemDanhs?.FirstOrDefault(dd => dd.AppUserId == hv.AppUserId && dd.BuoiHocId == buoiHoc.BuoiHocId);
+                    var diemDanh = diemDanhs?.FirstOrDefault(dd => dd.HocVienId == hv.HocVienId && dd.BuoiHocId == buoiHoc.BuoiHocId);
                     <tr class="text-center">
                         <td>@stt</td>
                         <td>@hv.HocVien.MaHocVien</td>
                         <td>@hv.HocVien.HoVaTen</td>
                         <td>
                             <select class="form-control form-control-sm trang-thai-diem-danh"
-                                    data-hocvien-id="@hv.AppUserId"
+                                    data-hocvien-id="@hv.HocVienId"
                                     data-buoihoc-id="@buoiHoc.BuoiHocId">
                                 <option value="-1" class="text-center" @(diemDanh == null ? "selected" : "")>Chưa điểm danh</option>
                                 <option value="0" class="text-center" @(diemDanh?.TrangThai == DiemDanh_HV.TrangThaiDiemDanhHV.CoMat ? "selected" : "")>Có mặt</option>
@@ -58,7 +58,7 @@
         </table>
 
         <div class="text-end">
-            <button class="btn btn-success" id="btnLuuDiemDanh">Lưu điểm danh</button>
+            <button class="btn btn-success" id="btnLuuDiemDanh">  <i class="fas fa-save"></i>Lưu điểm danh</button>
         </div>
     </div>
 </div>
@@ -76,7 +76,7 @@
         if (trangThai == -1) return;
 
         danhSachDiemDanh.push({
-            AppUserId: hocVienId,
+            HocVienId: hocVienId,
             BuoiHocId: buoiHocId,
             TrangThai: trangThai
         });
