--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/HocVien/Index.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/HocVien/Index.cshtml
@@ -11,7 +11,7 @@
         <!-- Action Bar -->
         <div class="card-header text-white text-center d-flex flex-wrap align-items-center justify-content-center gap-2 mb-3 mt-4">
             <a href="@Url.Action("Create")" class="btn btn-success">
-                <i class="bi bi-plus-circle"></i> Thêm học viên
+              Thêm học viên
             </a>
             <input type="text" class="form-control w-50" id="searchInput" placeholder="Tìm kiếm theo mã, tên, email..." />
             <button class="btn btn-primary" type="submit">
@@ -44,7 +44,7 @@
                         foreach (var hv in Model)
                         {
                             <tr>
-                                <td><input type="checkbox" class="check-item" value="@hv.Id" /></td>
+                                <td><input type="checkbox" class="check-item" value="@hv.HocVienId" /></td>
                                 <td>@hv.MaHocVien</td>
                                 <td>@hv.HoVaTen</td>
                                 <td>@hv.NgaySinh.ToShortDateString()</td>
@@ -53,10 +53,14 @@
                                 <td>@hv.CoQuanLamViec</td>
 
                                 <td>
-                                    <a href="@Url.Action("Edit", new { id = hv.Id })" class="btn btn-sm btn-warning">
+                                    <a href="@Url.Action("Details", new { id = hv.HocVienId})" class="btn btn-sm btn-primary">
+                                        <i class="fas fa-eye"></i>
+                                    </a>
+
+                                    <a href="@Url.Action("Edit", new { id = hv.HocVienId })" class="btn btn-sm btn-warning">
                                         <i class="fas fa-edit"></i>
                                     </a>
-                                    <a href="@Url.Action("Delete", new { id = hv.Id })" class="btn btn-sm btn-danger" onclick="return confirm('Bạn có chắc chắn muốn xóa học viên này?');">
+                                    <a href="@Url.Action("Delete", new { id = hv.HocVienId })" class="btn btn-sm btn-danger" onclick="return confirm('Bạn có chắc chắn muốn xóa học viên này?');">
                                         <i class="fas fa-trash-alt"></i>
                                     </a>
                                 </td>
@@ -112,4 +116,6 @@
             // TODO: AJAX hoặc POST xử lý
         }
     }
+
+
 </script>
